<resources>
    <string name="app_name">Firestore</string>
    <string name="student_roll_number">Student Roll Number</string>
    <string name="student_name">Student Name</string>
    <string name="add_student">Add student</string>
    <string name="get_student">Get student data</string>
    <string name="drop_collection">Clear the collection</string>
    <string name="drop_student">Delete the student</string>
</resources>
