<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/studentRollTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student_roll_number"
            android:labelFor="@id/studentRollET"
            app:layout_constraintTop_toTopOf="parent"/>

    <EditText
            android:id="@+id/studentRollET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/studentRollTV"
    />

    <TextView
            android:id="@+id/studentNameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/student_name"
            android:labelFor="@id/studentRollET"
            app:layout_constraintTop_toBottomOf="@id/studentRollET"
    />

    <EditText
            android:id="@+id/studentNameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/studentNameTV"
    />

    <Button
            android:id="@+id/getBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/get_student"
            style="@style/AppButtonPrimary"
            app:layout_constraintTop_toBottomOf="@id/studentNameET"
            android:onClick="getStudentData"
    />

    <Button
            android:id="@+id/addBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/add_student"
            style="@style/AppButton"
            app:layout_constraintTop_toBottomOf="@id/getBtn"
            android:onClick="addStudent"
    />

    <Button
            android:id="@+id/deleteBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/drop_student"
            style="@style/AppButton"
            app:layout_constraintTop_toBottomOf="@id/addBtn"
            android:onClick="deleteStudent"
    />

    <Button
            android:id="@+id/deleteAllBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/drop_collection"
            style="@style/AppButtonWarning"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="dropCollection"
    />

</androidx.constraintlayout.widget.ConstraintLayout>